Bug 475521 - Updating Ctags session index: [CTags Error] Failed to run. Error: execvp: No such file or directory
Summary: Updating Ctags session index: [CTags Error] Failed to run. Error: execvp: No ...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 23.08.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-12 15:27 UTC by Henri K
Modified: 2023-10-14 14:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henri K 2023-10-12 15:27:45 UTC
Updating *session* index for any directory causes error:

[CTags Error] Failed to run. Error: execvp: No such file or directory, exit code: 255.

Adding same directories to *common* index from Settings -> Ctags and updating works fine. "/home/henri/.local/share/kate/katectags/common_db" is created and for example "Go to local symbol" works.

STEPS TO REPRODUCE
1. Install (universal) ctags
2. Enable Ctags plugin
3. Open Ctags session index from bottom panel's Ctags -tab.
4. Under "Index target" click "+ Add"
5. Choose any directory
6. Click "Update index"

OBSERVED RESULT

Error: [CTags Error] Failed to run. Error: execvp: No such file or directory, exit code: 255.

EXPECTED RESULT

Shouldn't get error and indexing should work.

SOFTWARE/OS VERSIONS

Operating System: Fedora Linux 38
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10

$ ctags --version
Universal Ctags 6.0.0, Copyright (C) 2015-2022 Universal Ctags Team
Universal Ctags is derived from Exuberant Ctags.
Exuberant Ctags 5.8, Copyright (C) 1996-2009 Darren Hiebert
  Compiled: Feb  1 2023, 00:00:00
  URL: https://ctags.io/
  Output version: 0.0
  Optional compiled features: +wildcards, +regex, +iconv, +option-directory, +xpath, +json, +interactive, +sandbox, +yaml, +packcc, +optscript

Ctags is installed with DNF from official Fedora repo.

ADDITIONAL INFORMATION

Seems to happen with any directory. No spaces or special characters in file path. Directory for datebase "$HOME/.local/share/kate/katectags/" exists. 

$ which ctags
/usr/bin/ctags
Comment 1 Christoph Cullmann 2023-10-14 14:51:38 UTC
Git commit 5ea1d5df75685505bd5c08cf9328a51dd2968845 by Christoph Cullmann.
Committed on 14/10/2023 at 16:51.
Pushed by cullmann into branch 'master'.

better handling of ctags process starting

M  +7    -8    addons/kate-ctags/kate_ctags_plugin.cpp
M  +9    -8    addons/kate-ctags/kate_ctags_view.cpp

https://invent.kde.org/utilities/kate/-/commit/5ea1d5df75685505bd5c08cf9328a51dd2968845