better handling of ctags process starting

BUG: 475521